--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ contextlib2==0.6.0
 distlib==0.3.0
 distro==1.4.0
 Django==3.1.5
+django-cors-headers==3.8.0
 gunicorn==20.0.4
 html5lib==1.0.1
 idna==2.8
@@ -17,6 +18,7 @@ msgpack==0.6.2
 packaging==20.3
 pep517==0.8.2
 progress==1.5
+psycopg2-binary==2.9.1
 pyparsing==2.4.6
 pytoml==0.1.21
 pytz==2020.5
@@ -24,5 +26,6 @@ requests==2.22.0
 retrying==1.3.3
 six==1.14.0
 sqlparse==0.4.1
+toml==0.10.2
 urllib3==1.25.8
 webencodings==0.5.1
